# ghost

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LINKS.md  README.md  help_urls.h  justfile
.github/workflows/: release.yml  test.yml
TMP/: mkdocs.yml
TMP/docs/primitive-operators/: beside.md
ghost-cli/: Cargo.toml
ghost-cli/src/: main.rs
ghost-gui/src/: index.html  main.js  styles.css
ghost-gui/src-tauri/: Cargo.toml  tauri.conf.json
ghost-gui/src-tauri/capabilities/: default.json
ghost-gui/src-tauri/icons/: icon.icns
ghost-gui/src-tauri/src/: lib.rs  main.rs
ghost-lib/: Cargo.toml
ghost-lib/src/: lib.rs
src/: lib.rs  main.rs  mkdocs_utils.rs
