[workspace]
members = ["ghost-lib", "ghost-cli", "ghost-gui/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ghost-lib = { path = "ghost-lib" }
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
argh = "0.1.12"
pulldown-cmark = "0.13.0"
scraper = "0.24.0"
tempfile = "3.13.0"
